# AnalyticsApp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  LICENSE_RU  README.md  build.bat  clean.bat  package.json
.github/workflows/: ci-altlinux-alt10.yml  ci-altlinux-latest.yml  ci-cd.yml  ci-debug-windows.yaml  ci-develop.yaml  ci-feature.yaml  ci-main.yaml  ci-main.yaml.yaml  ci-redos.yml  ci-simple.yaml  ci-windows.yml  container-validation.yml  job-altlinux-10-build.yaml  job-altlinux-latest-build.yaml  job-redos-build.yaml  job-windows-build.yaml  release.yaml  report-feature-branch.yaml  report-production.yaml
.github/workflows/jobs/: altlinux-10-build.yaml  altlinux-latest-build.yaml  redos-build.yaml  windows-build.yaml
.github/workflows/reports/: feature-report.yaml  production-report.yaml
docs/: DEVELOPMENT_GUIDE.md  Doxyfile  PHASE3_COMPLETION.md  mainpage.md
scripts/: ci_setup.sh  demo_integration_test.bat  demo_integration_test.sh  full-rebuild.sh  generate_docs.bat  generate_docs.sh  quick-rebuild.sh  run_all_tests.bat  run_all_tests.sh  setup-dev-environment.sh  setup_environment.bat  test_app.bat  test_integration.bat  test_integration.sh  test_phase2.bat  test_phase2.sh  test_phase3.bat  test_phase3.sh  verify_build.bat  verify_build.sh  verify_release_0.1.0.sh
src/: CMakeLists.txt  DataModels.h  demo_datamodels.cpp  demo_directory_scanner.cpp  main.cpp
src/Core/: DataModels.cpp  DataModels.h
src/DataProcessor/: CMakeLists.txt  DataModels.cpp  DataModels.h  GradeCalculator.cpp  GradeCalculator.h
src/Demo/: demo_html_parser.cpp
src/FileProcessor/: CMakeLists.txt  DirectoryScanner.cpp  DirectoryScanner.h  ExcelFileFilter.cpp  ExcelFileFilter.h  ExcelParser.cpp  ExcelParser.h
src/Utils/: CMakeLists.txt  Config.cpp  Config.h  FileSystemUtils.cpp  FileSystemUtils.h  Logger.cpp  Logger.h
tests/: CMakeLists.txt  main.cpp  test_config.cpp  test_datamodels.cpp  test_directory_scanner.cpp  test_excel_parser.cpp  test_filesystem.cpp  test_gradecalculator.cpp  test_logger.cpp
